// protoc --go_out=./pb --go-grpc_out=./pb proto/* && protoc-go-inject-tag -XXX_skip=xorm -input=./pb/todoPb/toDoList.pb.go
syntax = "proto3";

option go_package = "./todoPb";

service ToDoList {
  rpc CreateToDoList (ToDoListDetail) returns (CreateToDoListResult) {}
  rpc ReadToDoList (ToDoListPage) returns (ReadToDoListByPage) {}
}

message ToDoListDetail {
  // @inject_tag: form:"id" xorm:"'id' not null pk autoincr"
  int64 id = 1;
  // @inject_tag: form:"content" xorm:"'content' varchar(300) not null default ''"
  string content = 2;
  // @inject_tag: form:"datetime" xorm:"'datetime' int(10) not null default 0"
  int64 datetime = 3;
  // @inject_tag: xorm:"'created_at' created"
  int64 created = 4;
  // @inject_tag: xorm:"'updated_at' updated"
  int64 updated = 5;
  // @inject_tag: xorm:"'deleted_at' deleted"
  int64 deleted = 6;
}

message CreateToDoListResult {
  int64 record = 1;
}

message ToDoListPage {
  int64 page = 1;
}

message ReadToDoListByPage {
  repeated ToDoListDetail todolist = 1;
}